Add logout endpoint to fully support session cookies
